# culter-agent

./: .gitignore  00_ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  README.zh.md  __init__.py  pyproject.toml
.reasonix/readme-versions/: README.zh-v20260618-0026.md
.reasonix/truncated-results/: 1781041449993-adf75760-run_command.txt
_bayesian/: README.md
_bayesian/tests/: test_core.py
_shared/: README.md  __init__.py
_shared/detectors/: __init__.py  bayesian_bridge.py  zscore_bridge.py
_shared/tests/: test_detectors.py
config/: agent.yaml  component_registry.yaml
data/knowledge_base/species/: culter-alburnus.md
docs/: ARCHITECTURE.md
scripts/: growth_analysis.py  shared_types.py  trophic_analysis.py
src/: __init__.py  adapter.py  knowledge_base.py  main.py
src/agent/: cognitive_analyzer.py  orchestrator.py
src/prompts/: system_prompts.py
src/skills/analyze-genetics/: SKILL.md
src/skills/analyze-genomics/: SKILL.md
src/skills/analyze-growth/: SKILL.md
src/skills/analyze-trophic/: SKILL.md
src/skills/assess-resource/: SKILL.md
src/skills/model-coexistence/: SKILL.md
src/skills/model-habitat/: SKILL.md
src/skills/search-literature/: SKILL.md
tests/: __init__.py  test_core.py  test_orchestrator_integration.py  test_smoke.py
