[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "culter-agent"
# ⚠️ VERSION.yaml is the single source of truth for version numbers.
# This field is for PyPI packaging only; runtime version is read from VERSION.yaml.
version = "2.1.0"
description = "长江鲌类领域专研智能体 — 基因组学 · 年龄生长 · 同位素 · 同域共存 · 资源评估"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "pyyaml>=6.0",
]

[project.optional-dependencies]
# 领域分析脚本的完整依赖（当前脚本仅使用 stdlib，以下为未来扩展预留）
analysis = [
    "numpy>=1.26",
    "pandas>=2.1",
    "scipy>=1.12",
    "scikit-learn>=1.4",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools.packages.find]
where = ["src"]
